--- a/src/main/resources/public/template/faq/faqSearch.html
+++ b/src/main/resources/public/template/faq/faqSearch.html
@@ -39,21 +39,12 @@
      * FAQ 검색
      */
     function getList(pageNum = 1) {
-        restSubmit('get', '/faqs?' + aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum);
-    }
-
-    // REST API
-    function restSubmit(method, url) {
-        const opt = {
-            method: method,
-            url: url,
-            async: false,
-            showProgressbar: false,
-            callbackFunc: function (response) {
-                document.getElementById('faqList').innerHTML = response.responseText
-            }
-        };
-        aliceJs.sendXhr(opt);
+        const urlParam = aliceJs.serialize(document.getElementById('searchFrm')) + '&pageNum=' + pageNum;
+        aliceJs.fetchText('/faqs?' + urlParam, {
+            method: 'GET',
+        }).then((htmlData) => {
+            document.getElementById('faqList').innerHTML = htmlData;
+        });
     }
     /*]]>*/
 </script>
